# linear_algebra_for_robotics

./: .gitattributes  .gitignore  .quartoignore  AUTHORING_MANUAL.md  CLAUDE.md  EDITING_SYSTEM_PLAN.md  EDITING_UX_RESEARCH.md  EDITING_UX_RESEARCH_2.md  Makefile  README.md  _quarto-book.yml  _quarto-proof.yml  _quarto-review.yml  _quarto-web.yml  _quarto.yml  about.html  about.qmd  atlas.html  atlas.qmd  curriculum.html  curriculum.qmd  design-system.html  design-system.qmd  dev  dev.ps1  editorial-desk.html  editorial-desk.qmd  future-scope.html  future-scope.qmd  glossary.html  glossary.qmd  index.html  index.qmd  paths.html  paths.qmd  proofs.html  proofs.qmd  pyproject.toml  references.bib  requirements.txt  (+8 more)
.github/: CODEOWNERS
assets/: README.md  artifact-manifest.yml
docs/: 00_master_plan.md  01_course_syllabus.md  02_chapter_authoring_template.md  03_visualization_and_tools.md
notebooks/: README.md
platform/: README.md  requirements.txt
remote-access/: README.md  bootstrap-macos.sh  bootstrap-windows.ps1
review/: about.html  atlas.html  curriculum.html  design-system.html  editorial-desk.html  future-scope.html  glossary.html  index.html  paths.html  proofs.html  search.json  software.html  stories.html  ui-ux-research.html
scripts/: atlas_matplotlib_fonts.py  bootstrap-tools.ps1  bootstrap-tools.sh  build_atlas_native_fonts.py  build_epub_fonts.py  dev.py  generate_jacobian_2r_geometry_figure.py  generate_jacobian_singularity_curve.py  generate_jacobian_velocity_map_figure.py  generate_kalman_tuning_figure.py  package_epub_assets.py  toolchain.json  (+1 more)
(+491 files in other folders)
